--- a/docs/user_manual/user_manual.tex
+++ b/docs/user_manual/user_manual.tex
@@ -292,6 +292,13 @@ showstringspaces=false            %
     % This is where the body of the report begins; usually with an Introduction
     %
     \input{Introduction.tex}
+    \input{include/ETmodel.tex}
+    \input{include/FTmodel.tex}
+    \input{include/MarkovModel.tex}
+    \input{include/RBDmodel.tex}
+    \input{include/DataClassifier.tex}
+    \input{include/ETdataImporter.tex}
+    \input{include/FTdataImporter.tex}
 
     \section*{Document Version Information}
     This document has been compiled using the following version of the plug-in git repository:
