--- a/doc/sqa/sdd/dataInterfaceSystemControl.tex
+++ b/doc/sqa/sdd/dataInterfaceSystemControl.tex
@@ -12,7 +12,7 @@ Python dictionaries.
 % THIS SECTION SHOULD BE REPLACED WITH THE ONE ABOVE ONCE IT GOES OPEN-SOURCE
 
 The software is accessible via GITLAB to licensed users. The distribution is restricted within the Light Water Reactor Sustainability group.
-The software is available at the following url: \url{https://hpcgitlab.inl.gov/mandd/SR2ML}.
+The software is available at the following url: \url{git@hpcgitlab.hpc.inl.gov:RAVEN_PLUGINS/SR2ML.git}.
 
  \section{REQUIREMENTS CROSS-REFERENCE}
 The requirements are detailed in SPC-xxxx, ``SR2ML Software Requirements Specification (SRS) and Traceability Matrix''.
