--- a/doc/sqa/sdd/sr2mlSoftwareDesign.tex
+++ b/doc/sqa/sdd/sr2mlSoftwareDesign.tex
@@ -28,7 +28,7 @@ Instead, the developer creates a new Python module that is going to be embedded
 In order to install the SR2ML plugin (if not downloaded by RAVEN submodule system),
  the user can run the script contained in the RAVEN script folder:
 \begin{lstlisting}[language=bash]
- python path/to/raven/scripts/install_plugins.py  **directory**/SR2ML
+ python path/to/raven/scripts/install_plugins.py -s  **directory**/SR2ML
 \end{lstlisting}
 where  $**directory**$/SR2ML should be replaced with the absolute path to the SR2ML plugin directory.
 (e.g. ``path/to/my/plugins/SR2ML'').
