--- a/doc/sqa/sdd/sr2ml_software_design_description.tex
+++ b/doc/sqa/sdd/sr2ml_software_design_description.tex
@@ -366,7 +366,7 @@ showstringspaces=false            %
 \input{otherDesignDocs.tex}
 \input{sr2mlDepAndLimitations.tex}
 \input{sr2mlDesignStakeHoldersAndConcerns.tex}
-\input{sr2mlSoftwareDesing.tex}
+\input{sr2mlSoftwareDesign.tex}
 \input{dataInterfaceSystemControl.tex}
 
 
