--- a/doc/user_manual/include/ETmodel.tex
+++ b/doc/user_manual/include/ETmodel.tex
@@ -2,7 +2,7 @@
 \label{sec:ETModel}
 
 This model is designed to read from file the structure of the ET and to import such Boolean logic structure as a RAVEN model.
-The ET must be specified in a specific format: the OpenPSA format (\href{<url>}{https://github.com/open-psa}). 
+The ET must be specified in a specific format: the OpenPSA format (\href{<url>}{https://github.com/open-psa}).
 As an example, the ET of Fig.~\ref{fig:ET} is translated in the OpenPSA format as shown below:
 
 \begin{lstlisting}[style=XML,morekeywords={anAttribute},caption=ET of Fig.~\ref{fig:ET} in OpenPSA format., label=lst:ETModel]
@@ -39,18 +39,18 @@ As an example, the ET of Fig.~\ref{fig:ET} is translated in the OpenPSA format a
         </fork>
     </initial-state>
 </define-event-tree>
-\end{lstlisting} 
+\end{lstlisting}
 
 \begin{figure}
     \centering
-    \centerline{\includegraphics[scale=0.5]{ET.pdf}} 
+    \centerline{\includegraphics[scale=0.5]{ET.pdf}}
     \caption{Example of ET.}
     \label{fig:ET}
 \end{figure}
 
 The ET of Fig.~\ref{fig:ET} and defined in Listing~\ref{lst:ETModel} can be defined in the RAVEN input file as follows:
 \begin{lstlisting}[style=XML,morekeywords={anAttribute},caption=ET model input example., label=lst:ET_InputExample]
-  <Models> 
+  <Models>
     ...
     <ExternalModel name="ET" subType="ETModel">
       <variables>
@@ -65,8 +65,8 @@ The ET of Fig.~\ref{fig:ET} and defined in Listing~\ref{lst:ETModel} can be defi
   </Models>
 \end{lstlisting}
 
-All the specifications of the ET model are given in the 
-\xmlNode{ExternalModel} block. 
+All the specifications of the ET model are given in the
+\xmlNode{ExternalModel} block.
 Inside the \xmlNode{ExternalModel} block, the XML
 nodes that belong to this models are:
 \begin{itemize}
@@ -78,7 +78,7 @@ nodes that belong to this models are:
 	  \end{itemize}
 \end{itemize}
 
-Provided this definition and the ET model of Fig.~\ref{fig:ET} and described in Listing~\ref{lst:ETModel}, 
+Provided this definition and the ET model of Fig.~\ref{fig:ET} and described in Listing~\ref{lst:ETModel},
 the resulting model in RAVEN is characterized by these variables:
 \begin{itemize}
 	\item Input variables: statusACC, statusLPI, statusLPR
@@ -87,9 +87,6 @@ the resulting model in RAVEN is characterized by these variables:
 
 \subsection{ET model reference tests}
 \begin{itemize}
-	\item test\_ETmodel.xml
-	\item test\_ETmodel\_TD.xml
+	\item SR2ML/tests/test\_ETmodel.xml
+	\item SR2ML/tests/test\_ETmodel\_TD.xml
 \end{itemize}
-
-
-
