--- a/doc/user_manual/include/FTmodel.tex
+++ b/doc/user_manual/include/FTmodel.tex
@@ -2,7 +2,7 @@
 \label{sec:FTModel}
 
 This model is designed to read from file the structure of the FT and to import such Boolean logic structure as a RAVEN model.
-The FT must be specified in a specific format: the OpenPSA format (\href{<url>}{https://github.com/open-psa}). 
+The FT must be specified in a specific format: the OpenPSA format (\href{<url>}{https://github.com/open-psa}).
 As an example, the FT of Fig.~\ref{fig:FT} is translated in the OpenPSA as shown below:
 
 \begin{lstlisting}[style=XML,morekeywords={anAttribute},caption=FT in OpenPSA format., label=lst:FTModel]
@@ -53,11 +53,11 @@ As an example, the FT of Fig.~\ref{fig:FT} is translated in the OpenPSA as shown
         </define-component>
     </define-fault-tree>
 </opsa-mef>
-\end{lstlisting} 
+\end{lstlisting}
 
 \begin{figure}
     \centering
-    \centerline{\includegraphics[scale=0.5]{FT.pdf}} 
+    \centerline{\includegraphics[scale=0.5]{FT.pdf}}
     \caption{Example of FT.}
     \label{fig:FT}
 \end{figure}
@@ -65,7 +65,7 @@ As an example, the FT of Fig.~\ref{fig:FT} is translated in the OpenPSA as shown
 The FT of Fig.~\ref{fig:FT} and defined in Listing~\ref{lst:FTModel} can be defined in the RAVEN input file as follows:
 
 \begin{lstlisting}[style=XML,morekeywords={anAttribute},caption=FT model input example., label=lst:FT_InputExample]
-  <Models> 
+  <Models>
     ...
     <ExternalModel name="FT" subType="FTModel">
       <variables>
@@ -81,8 +81,8 @@ The FT of Fig.~\ref{fig:FT} and defined in Listing~\ref{lst:FTModel} can be defi
   </Models>
 \end{lstlisting}
 
-All the specifications of the FT model are given in the 
-\xmlNode{ExternalModel} block. 
+All the specifications of the FT model are given in the
+\xmlNode{ExternalModel} block.
 Inside the \xmlNode{ExternalModel} block, the XML
 nodes that belong to this models are:
 \begin{itemize}
@@ -94,7 +94,7 @@ nodes that belong to this models are:
 	  \end{itemize}
 \end{itemize}
 
-Provided this definition, the FT model of Fig.~\ref{fig:ET} and described in Listing~\ref{lst:ETmodel}, 
+Provided this definition, the FT model of Fig.~\ref{fig:ET} and described in Listing~\ref{lst:ETmodel},
 the resulting model in RAVEN is characterized by these variables:
 \begin{itemize}
 	\item Input variables: statusBE1, statusBE2, statusBE3, statusBE4
@@ -103,6 +103,6 @@ the resulting model in RAVEN is characterized by these variables:
 
 \subsection{FT model reference tests}
 \begin{itemize}
-	\item test\_FTmodel.xml
-	\item test\_FTmodel\_TD.xml
+	\item SR2ML/tests/test\_FTmodel.xml
+	\item SR2ML/tests/test\_FTmodel\_TD.xml
 \end{itemize}
